	  media size, points instead of millimeters.
	- IMG elements with links that use the ALIGN attribute
	  didn't get the links.
	- Header and footer comments would interfere with the
	  top and bottom margin settings.
	- Fixed a bug in the htmlReadFile() function which
	  caused user-provided title pages not to be displayed
	  in PS or PDF output.

CHANGES IN HTMLDOC v1.8.19

    NEW FEATURES

	- Now support the "subject" meta variable.

    CHANGES

	- Updated the HTML parser to use HTML 4.0 rules for
	  embedding elements inside a LI.
	- Now check for a TYPE attribute on EMBED elements, so
	  that embedded Flash files do not get treated as HTML.
	- Now put the COPYRIGHT meta data in the Author field in
	  a PDF file along with the AUTHOR meta data (if any).
	- No longer embed the prolog.ps command header when
	  PostScript commands are not being embedded in the
	  output.
	- HTMLDOC now properly ignores the HTML 4.0 COL element.

    BUG FIXES

	- Squeezed tables were not centered or right-aligned
	  properly.
	- Cells didn't align properly if they were the first
	  things on the page, or if there were several
	  intervening empty cells.
	- The preferred cell width handling didn't account for
	  the minimum cell width, which could cause some tables
	  to become too large.
	- Remote URLs didn't always resolve properly (like the
	  images from the Google web page...)
	- The font width loading code didn't force the
	  non-breaking space to have the same width as a regular
	  space.
	- PRE text didn't adjust the line height for the tallest
	  fragment in the line.
	- HTMLDOC tried to seek backwards when reading HTML
	  from the standard input.
	- The media margin comments did not work properly when
	  the current media orientation was landscape.


CHANGES IN HTMLDOC v1.8.18

    NEW FEATURES

	- Added support for remote HTML title pages.

    CHANGES

	- Now accept all JPEG files, even if they don't start
	  with an APPn marker.