@@ -41,6 +41,10 @@
 	caused user-provided title pages not to be displayed in
 	PS or PDF output.
 
+	<LI>The table-of-contents would inherit the last media
+	settings in the document, but use the initial settings
+	when formatting.
+
 </UL>
 
 <H2>Changes in HTMLDOC v1.8.19</H2>
